# adsb-k8s-tracker

./: Dockerfile  LICENSE  README.md  install-deps.sh  install.sh  pyproject.toml  redeploy-adsb-api.sh  scratch-pad
app/adsb-api/: main.py  pyproject.toml  worker.py
app/adsb-ingestor/: main.py  pyproject.toml
app/adsb-ui/: main.py  pyproject.toml
app/adsb-ui/static/: index.html
charts/adsb-alerts/: Chart.yaml
charts/adsb-api/: Chart.yaml
charts/adsb-api/templates/: adsb-api.yaml  configmap.yaml
charts/adsb-db/: Chart.yaml  values.yaml
charts/adsb-db/templates/: adsb-db-secret.yaml  adsb-db.yaml
charts/adsb-decoder/: Chart.yaml
charts/adsb-decoder/templates/: adsb-decoder.yaml  adsb-location-secret.yaml
charts/adsb-gateway/: Chart.yaml
charts/adsb-gateway/templates/: adsb-gateway.yaml
charts/adsb-ingestor/: Chart.yaml
charts/adsb-ingestor/templates/: adsb-ingestor.yaml  infisical-store.yaml
charts/adsb-ui/templates/: adsb-ui.yaml
charts/cluster-infra/: Chart.yaml  values.yaml
charts/cluster-infra/templates/: adsb-db-secret.yaml  infisical-store.yaml
