[project]
name = "adsb-k8s-workspace"
version = "0.1.0"
description = "Monorepo workspace root for the adsb-k8s-tracker pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "app/adsb-api",
    "app/adsb-ingestor",
    "app/adsb-ui"
]
