[project]
name = "adsb-api"
version = "0.1.0"
description = "Fetches ADS-B data from external API and applies filter logic before shipping filtered data to ingestor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.4.22",
    "charset-normalizer>=3.4.7",
    "geographiclib>=2.1",
    "geopy>=2.4.1",
    "idna>=3.15",
    "pyttsx3>=2.99",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
]
