[project]
name = "adsb-ingestor"
version = "0.1.0"
description = "Ingests ADS-B data from local decoders and external APIs into PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.9.5",
    "asyncpg>=0.29.0",
]
[tool.uv]
package = false

